[package]
name = "rjq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.8.1"
rstest = "0.17.0"
serde_json = "1.0.96"
